<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_pkg_cpp</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="juan97pena@gmail.com">juan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- add this line -->
  <test_depend>ament_cmake_gtest</test_depend> 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
